// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookPage component renders a BookPage by default 1`] = `
<Fragment>
  <Link
    to="/"
  >
    Music Book Review
  </Link>
  <Section
    id="book"
  >
    <p />
    <div
      className="book-info"
    >
      <h3 />
      <p />
      <p />
    </div>
    <SaveBook />
    <div
      className="ratings-container"
    >
      <span />
      <span>
        Based on 
         reviews
      </span>
    </div>
    <BookReviews />
    <ReviewForm />
  </Section>
</Fragment>
`;

exports[`BookPage component renders the Book given props 1`] = `
<Fragment>
  <Link
    to="/"
  >
    Music Book Review
  </Link>
  <Section
    id="book"
  >
    <p>
      an image
    </p>
    <div
      className="book-info"
    >
      <h3>
        where the red fern grows
      </h3>
      <p>
        i forgot
      </p>
      <p>
        two dogs in a very sad tale
      </p>
    </div>
    <SaveBook />
    <div
      className="ratings-container"
    >
      <span>
        4
      </span>
      <span>
        Based on 
        10
         reviews
      </span>
    </div>
    <BookReviews
      reviews={
        Array [
          Object {
            "id": 1,
            "rating": 3,
            "text": "it was pretty good",
            "user": Object {
              "full_name": "dave bones",
            },
          },
        ]
      }
    />
    <ReviewForm />
  </Section>
</Fragment>
`;
